force-app/main/default/objects/LifeForm__c/LifeForm__c.object-meta.xml
<CustomObject>
    <label>LifeForm</label>
    <nameField>
        <label>LifeForm Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LifeForms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>