force-app/main/default/objects/LifeForm__c/fields/Alive__c.field-meta.xml
<CustomField>
    <fullName>Alive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alive</label>
    <type>Checkbox</type>
</CustomField>