force-app/main/default/objects/LifeForm__c/fields/Neighbor_East__c.field-meta.xml
<CustomField>
    <fullName>Neighbor_East__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neighbor East</label>
    <referenceTo>LifeForm__c</referenceTo>
    <relationshipLabel>LifeForms</relationshipLabel>
    <relationshipName>LifeForms_E</relationshipName>
    <type>Lookup</type>
</CustomField>