force-app/main/default/objects/LifeForm__c/fields/Neighbor_NE__c.field-meta.xml
<CustomField>
    <fullName>Neighbor_NE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neighbor NE</label>
    <referenceTo>LifeForm__c</referenceTo>
    <relationshipLabel>LifeForms (Neighbor NE)</relationshipLabel>
    <relationshipName>LifeForms_NE</relationshipName>
    <type>Lookup</type>
</CustomField>