force-app/main/default/objects/LifeForm__c/fields/Neighbor_North__c.field-meta.xml
<CustomField>
    <fullName>Neighbor_North__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neighbor North</label>
    <referenceTo>LifeForm__c</referenceTo>
    <relationshipLabel>LifeForms (Neighbor North)</relationshipLabel>
    <relationshipName>LifeForms_N</relationshipName>
    <type>Lookup</type>
</CustomField>