force-app/main/default/objects/LifeForm__c/fields/Neighbor_NW__c.field-meta.xml
<CustomField>
    <fullName>Neighbor_NW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neighbor NW</label>
    <referenceTo>LifeForm__c</referenceTo>
    <relationshipLabel>LifeForms (Neighbor NW)</relationshipLabel>
    <relationshipName>LifeForms_NW</relationshipName>
    <type>Lookup</type>
</CustomField>