force-app/main/default/objects/LifeForm__c/fields/Neighbor_SE__c.field-meta.xml
<CustomField>
    <fullName>Neighbor_SE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neighbor SE</label>
    <referenceTo>LifeForm__c</referenceTo>
    <relationshipLabel>LifeForms (Neighbor SE)</relationshipLabel>
    <relationshipName>LifeForms_SE</relationshipName>
    <type>Lookup</type>
</CustomField>