force-app/main/default/objects/LifeForm__c/fields/Neighbor_South__c.field-meta.xml
<CustomField>
    <fullName>Neighbor_South__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neighbor South</label>
    <referenceTo>LifeForm__c</referenceTo>
    <relationshipLabel>LifeForms (Neighbor South)</relationshipLabel>
    <relationshipName>LifeForms_S</relationshipName>
    <type>Lookup</type>
</CustomField>