force-app/main/default/objects/LifeForm__c/fields/Neighbor_SW__c.field-meta.xml
<CustomField>
    <fullName>Neighbor_SW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neighbor SW</label>
    <referenceTo>LifeForm__c</referenceTo>
    <relationshipLabel>LifeForms (Neighbor SW)</relationshipLabel>
    <relationshipName>LifeForms_SW</relationshipName>
    <type>Lookup</type>
</CustomField>