force-app/main/default/objects/LifeForm__c/fields/Neighbor_West__c.field-meta.xml
<CustomField>
    <fullName>Neighbor_West__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Neighbor West</label>
    <referenceTo>LifeForm__c</referenceTo>
    <relationshipLabel>LifeForms (Neighbor West)</relationshipLabel>
    <relationshipName>LifeForms_W</relationshipName>
    <type>Lookup</type>
</CustomField>