force-app/main/default/objects/LifeForm__c/fields/Y_Coordinate__c.field-meta.xml
<CustomField>
    <fullName>Y_Coordinate__c</fullName>
    <label>Y Coordinate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>